--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,8 @@ body {
 .weather-app {
   background: white;
   max-width: 600px;
-  margin: 30px auto;
+  margin: 45px auto;
+  border-radius: 16px;
   box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
   padding: 30px;
 }
